fixed small issue that organism IDs with 4 digits were not fully visible anymore in organism panel

--- a/src/main/resources/web/visualizer/style.css
+++ b/src/main/resources/web/visualizer/style.css
@@ -153,7 +153,7 @@ header {
 
 #organism-panel {
     right: 35px;
-    width: 620px;
+    width: 640px;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -243,7 +243,7 @@ header {
 }
 
 .organism-col-id {
-    width: 30px;
+    width: 50px;
     font-weight: bold;
 }
 
